Comment margin overflow fixed
Comment margin overflow fixed

--- a/style.css
+++ b/style.css
@@ -1481,10 +1481,8 @@ Content Area
 .comment-content,
 .comment-reply {
 	clear: both;
-	margin-left: 56px;
-	margin-left: 5.6rem;
-	margin-right: 30px;
-	margin-right: 3rem;
+	margin: 0 56px;
+	margin: 0 5.6rem;
 }
 
 .entry-comments .comment-author {
